--- a/index.html
+++ b/index.html
@@ -94,8 +94,8 @@
                     We specialise in custom birthday cakes, hand-painted to reflect your unique theme or design. Our mission is simple: to bring joy with every sweet bite. 
                 </p>
                 <p class="text-muted">
-                    Misi kami sederhana — menghadirkan kebahagiaan melalui setiap gigitan manis. 🍰  
-                    Datang dan nikmati pengalaman rasa yang tak terlupakan!
+                    Our mission is simple — to deliver happiness through every sweet bite. 🍰 
+                    Come and enjoy an unforgettable taste experience!
                 </p>
                 </div>
             </div>
